--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,3 +34,7 @@ jobs:
           owner: 'element-plus'
           repository: 'element-plus'
           access-token: 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
+      - name: Access cloned repository content
+        run: |
+          cd element-plus
+          ls -la
