--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -38,7 +38,7 @@ jobs:
           repository: element-plus/element-plus
           path: resources
           ref: main
-          token: ${{ secrets.ACCESS_TOKEN }}
+          # token: ${{ secrets.ACCESS_TOKEN }}
       - name: Access cloned repository content
         run: |
           cd element-plus
